<resources>
<string name="dns_title">เซิร์ฟเวอร์ DNS</string>
<string name="dns_summary">เลือก DNS ที่จะใช้ตอนเชื่อมต่อ VPN</string>
	<string name="jk">เป็นเวอร์ชั่นล่าสุดแล้ว</string>
	<string name="bk">กรุณารอสักครู่...</string>
	<string name="oks">ตกลง</string>
	<string name="b1">พบการอัพเดทเซิร์ฟเวอร์ใหม่เวอร์ชั่น</string>
	<string name="b2">คุณต้องการอัพเดทหรือไม่</string>
	<string name="bn">กำลังอัพเดทเซิร์ฟเวอร์</string>
	<string name="hj">ตรวจพบการอัพเดทเซิร์ฟเวอร์</string>
    <string name="status_bar_notification_info_overflow">999+</string>
	<string name="about_menu">เกี่ยวกับ! แอพ</string>
	<string name="about_text" formatted="false">OpenVPN Connect %s (build %d)</string>
	<string name="add_proxy">เพิ่มพร็อกซี่</string>
	<string name="add_routes">VPN: การเพิ่มเส้นทาง</string>
	<string name="add_shortcut_app">เพิ่มทางลัดของแอป</string>
	<string name="add_shortcut_connect">เพิ่มทางลัดเชื่อมต่อ</string>
	<string name="add_shortcut_disconnect">เพิ่มทางลัด ตัดการเชื่อมต่อ</string>
	<string name="add_shortcut_help_text">สร้างทางลัดการเชื่อมต่อสำหรับโปรไฟล์ที่กำหนดในหน้าแรกของคุณ เมื่อคุณแตะทางลัดส่วนกำหนดค่าจะเชื่อมต่อโดยอัตโนมัติ</string>
	<string name="add_shortcut_menu">เพิ่มทางลัด</string>
	<string name="advanced_menu">ขั้นสูง</string>
	<string name="alt_proxy_summary">เปิดใช้งานพร็อกซี่อุโมงค์ส่วนตัว (สำหรับโปรไฟล์อุโมงค์ส่วนตัวเท่านั้น)</string>
	<string name="alt_proxy_title">พร็อกซี่อุโมงค์ส่วนตัว</string>
	<string name="app">OpenVPNLite</string>
	<string name="app_shortcut_title">OpenVPNLite</string>
	<string name="apprate_dismiss">ไม่เป็นไรขอบคุณ</string>
	<string name="apprate_message">หากคุณสนุกกับการใช้% s โปรดสละเวลาให้คะแนน ขอบคุณสำหรับการสนับสนุน!</string>
	<string name="apprate_rate">ให้คะแนนมัน!</string>
	<string name="apprate_remind_later">เตือนฉันภายหลัง</string>
	<string name="apprate_title">อัตรา %s</string>
	<string name="ar_accept">ยอมรับ</string>
	<string name="ar_cancel">ยกเลิก</string>
	<string name="ar_title">โปรไฟล์พร้อมใช้งานสำหรับการนำเข้า</string>
	<string name="ar_warn_replace">หมายเหตุ: โปรไฟล์ที่มีอยู่จะถูกแทนที่</string>
	<string name="assign_ip">VPN: การกำหนดที่อยู่ IP</string>
	<string name="auth">VPN: การรับรองความถูกต้อง</string>
	<string name="auth_failed">การตรวจสอบสิทธิ์ VPN ล้มเหลว</string>
	<string name="auto_keyboard_summary">ยก / ยกเลิกคีย์บอร์ดอัตโนมัติ</string>
	<string name="auto_keyboard_title">คีย์บอร์ดอัตโนมัติ</string>
	<string name="autologin_suffix" />
	<string name="autostart_finish_on_connect_summary">เมื่อเปิดใช้งานการเชื่อมต่อ VPN จากช็อตคัตหรือรีบูตอัตโนมัติและไม่จำเป็นต้องป้อนข้อมูลผู้ใช้ในการตรวจสอบสิทธิ์การเชื่อมต่อ.</string>
	<string name="autostart_finish_on_connect_title">ทางลัดย่อเล็กสุด</string>
	<string name="autostart_summary">หากการเชื่อมต่อ VPN เปิดใช้งานเมื่อปิดอุปกรณ์ให้ลองเชื่อมต่ออีกครั้งเมื่อรีบูต</string>
	<string name="autostart_title">เชื่อมต่อใหม่เมื่อรีบูต</string>
	<string name="beta_expire_warn">หมายเหตุ: เบต้านี้จะหมดอายุใน% s</string>
	<string name="bytes_in">รับข้อมูล</string>
	<string name="bytes_out">ส่งข้อมูล</string>
	<string name="cert_error_header_text">ข้อผิดพลาดของใบรับรอง:</string>
	<string name="cert_profile_insecure_summary">เปิดใช้งานการรองรับลายเซ็น MD5 ของใบรับรอง X509 โปรดทราบว่า MD5 นั้นใช้งานไม่ได้และไม่ควรใช้</string>
	<string name="cert_profile_insecure_title">ใช้อัลกอริทึมที่ไม่ปลอดภัย</string>
	<string name="cert_verify_fail">การตรวจสอบใบรับรองเซิร์ฟเวอร์ OpenVPN ล้มเหลว</string>
	<string name="cert_warn_accept">ยอมรับ</string>
	<string name="cert_warn_reject">ปฏิเสธ</string>
	<string name="cert_warn_title">ยอมรับใบรับรองไม่ถูกต้องหรือไม่?</string>
	<string name="channel_description">การแจ้งเตือน VPN</string>
	<string name="channel_name">VPN</string>
	<string name="client_halt">ไคลเอนต์ VPN ถูกหยุดโดยเซิร์ฟเวอร์</string>
	<string name="client_ip">IP ของลูกค้า</string>
	<string name="client_restart">เซิร์ฟเวอร์ VPN รีสตาร์ทโดยเซิร์ฟเวอร์</string>
	<string name="common_name">ชื่อสามัญ:</string>
	<string name="compression_summary">ตัวเลือกการบีบอัดอุโมงค์</string>
	<string name="compression_title">การอัด</string>
	<string name="config_file_parse_error">เกิดข้อผิดพลาดในการแยกวิเคราะห์ไฟล์กำหนดค่า OpenVPN</string>
	<string name="conn_timeout_summary">VPN ควรพยายามเชื่อมต่อนานแค่ไหนก่อนจะยอมแพ้?</string>
	<string name="conn_timeout_title">หมดเวลาเชื่อมต่อ</string>
	<string name="connect">เชื่อมต่อ</string>
	<string name="connected">VPN: เชื่อมต่อสำเร็จ</string>
	<string name="connecting">VPN: กำลังเชื่อมต่อ...</string>
	<string name="connection_timeout">VPN: หมดเวลาการเชื่อมต่อ</string>
	<string name="core_thread_abandoned">VPN: ตัดการเชื่อมต่อ</string>
	<string name="core_thread_active">VPN: การเริ่มต้น</string>
	<string name="core_thread_error">ข้อผิดพลาด core OpenVPN</string>
	<string name="core_thread_inactive">VPN: การหยุด</string>
	<string name="cr_cancel">ยกเลิก</string>
	<string name="cr_continue">ต่อไป</string>
	<string name="cr_error">ข้อผิดพลาดในการแสดงความท้าทาย / ตอบสนอง</string>
	<string name="cr_title">ความท้าทายของเซิร์ฟเวอร์</string>
	<string name="create_shortcut_cancel">ยกเลิก</string>
	<string name="create_shortcut_prompt">ชื่อทางลัดของโปรไฟล์:</string>
	<string name="create_shortcut_title">สร้างทางลัดการเชื่อมต่อ</string>
	<string name="create_shortcut_yes">สร้างทางลัด</string>
	<string name="creds_error">ข้อผิดพลาดของข้อมูลรับรอง OpenVPN</string>
	<string name="delete_profile_confirm_cancel">ยกเลิก</string>
	<string name="delete_profile_confirm_title">ยืนยันการลบโปรไฟล์</string>
	<string name="delete_profile_confirm_yes">ลบ</string>
	<string name="disconnect">หยุด</string>
	<string name="disconnect_shortcut_title">ปลด</string>
	<string name="disconnected">VPN: ตัดการเชื่อมต่อ</string>
	<string name="duration">ระยะเวลาการเชื่อมต่อ</string>
	<string name="dynamic_challenge">การตรวจสอบสิทธิ์ OpenVPN</string>
	<string name="enable_notifications_summary">แสดงการแจ้งเตือน</string>
	<string name="enable_notifications_title">การแจ้งเตือน</string>
	<string name="epki_error">ข้อผิดพลาด PKI ภายนอก</string>
	<string name="epki_invalid_alias">สูญเสียการเชื่อมโยง KeyChain กับใบรับรองโปรไฟล์และรหัสส่วนตัว กรุณาลองเข้าสู่ระบบอีกครั้ง.</string>
	<string name="epki_missing_cert">ไม่สามารถรับใบรับรองโปรไฟล์จาก KeyChain</string>
	<string name="exit_full">ออกจากทั้งหมด</string>
	<string name="exit_partial">ออก</string>
	<string name="expires_on">หมดอายุเมื่อ:</string>
	<string name="file_dialog_cancel">ยกเลิก</string>
	<string name="file_dialog_cant_read_folder">ไม่สามารถอ่านโฟลเดอร์</string>
	<string name="file_dialog_create">บันทึก</string>
	<string name="file_dialog_err">ความผิดพลาด</string>
	<string name="file_dialog_file_name">ชื่อไฟล์:</string>
	<string name="file_dialog_location">ที่ตั้ง</string>
	<string name="file_dialog_new">ใหม่</string>
	<string name="file_dialog_no_data">ไม่มีข้อมูล</string>
	<string name="file_dialog_select">เลือก</string>
	<string name="file_read_error">อ่านไฟล์ไม่ได้</string>
	<string name="file_too_large" formatted="false">ไฟล์% s ใหญ่เกินไป (ไม่เกิน% d ไบต์)</string>
	<string name="fingerprints">ลายนิ้วมือ:</string>
	<string name="force_aes_cbc_ciphersuites_summary">การเปิดใช้งานตัวเลือกนี้บางครั้งสามารถช่วยได้เมื่อเชื่อมต่อกับเซิร์ฟเวอร์ดั้งเดิม</string>
	<string name="force_aes_cbc_ciphersuites_title">บังคับ ciphersuites AES-CBC</string>
	<string name="forget_creds">ลืมข้อมูลประจำตัว</string>
	<string name="forget_creds_cancel">ยกเลิก</string>
	<string name="forget_creds_message">ลืมข้อมูลประจำตัวและข้อมูลความน่าเชื่อถือที่บันทึกไว้ แต่เก็บรักษาโปรไฟล์และพร็อกซีทั้งหมด?</string>
	<string name="forget_creds_title">ลืมข้อมูลประจำตัว</string>
	<string name="forget_creds_yes">ใช่</string>
	<string name="get_config">VPN: กำลังดึงการตั้งค่าจากเซิร์ฟเวอร์</string>
	<string name="google_dns_fallback_summary">ใช้เซิร์ฟเวอร์ Google DNS เป็นทางเลือกสำหรับการเชื่อมต่อที่กำหนดเส้นทางการรับส่งข้อมูลอินเทอร์เน็ตทั้งหมดผ่านอุโมงค์ VPN แต่ไม่ได้กำหนดเซิร์ฟเวอร์ VPN DNS ใด ๆ</string>
	<string name="google_dns_fallback_title">DNS Fallback</string>
	<string name="help_menu">* ช่วยเหลือ !</string>
	<string name="https_client_task_error">ข้อผิดพลาดของงานไคลเอนต์ HTTPS</string>
	<string name="import_autologin_checkbox_text">นำเข้าโปรไฟล์อัตโนมัติ</string>
	<string name="import_button_text">นำเข้าโปรไฟล์</string>
	<string name="import_cancel_button_text">ยกเลิก</string>
	<string name="import_help_text">หากต้องการสร้างทางลัดไปยังโปรไฟล์นี้หรือเข้าถึงเมนูบริบทของโปรไฟล์ (สำหรับเปลี่ยนชื่อลบ ฯลฯ ) ให้ปุ่มไอคอนแก้ไขทางด้านขวา หากต้องการเปลี่ยนเป็นรูปแบบอื่นให้แตะชื่อรูปแบบย่อ.</string>
	<string name="import_help_title">นำเข้าโปรไฟล์</string>
	<string name="import_menu">นำเข้า โปรไฟล์</string>
	<string name="import_pkcs12">นำเข้า PKCS # 12 จากการ์ด SD</string>
	<string name="import_private_tunnel_profile">นำเข้าโปรไฟล์อุโมงค์ส่วนตัว</string>
	<string name="import_profile">นำเข้าโปรไฟล์</string>
	<string name="import_profile_remote">นำเข้าโปรไฟล์เซิร์ฟเวอร์การเข้าถึง</string>
	<string name="import_server_prompt">เข้าถึงเซิร์ฟเวอร์โฮสต์:</string>
	<string name="inactive_timeout">ไม่ใช้งานการเชื่อมต่อ OpenVPN</string>
	<string name="info_group_header">ข้อมูลการเชื่อมต่อ:</string>
	<string name="info_msg">VPN: ข้อมูล</string>
	<string name="ipv4_addr">IPv4</string>
	<string name="ipv6_addr">IPv6</string>
	<string name="ipv6_summary">การกำหนดค่าตามความชอบช่องสัญญาณ IPv6</string>
	<string name="ipv6_title">IPv6</string>
	<string name="issued_by">ออกโดย:</string>
	<string name="issued_on">ออกเมื่อ:</string>
	<string name="issued_to">ออกให้:</string>
	<string name="last_pkt_recv">ได้รับแพ็คเก็ต</string>
	<string name="log_pause">ปุ่มหยุดชั่วคราว</string>
	<string name="log_resume">ทำงานต่อ</string>
	<string name="log_title">หัวข้อหน้า Log</string>
	<string name="lpr_1_sec_ago">1 วินาทีที่ผ่านมา</string>
	<string name="lpr_gt_1_hour_ago">> 1 ชั่วโมงที่แล้ว</string>
	<string name="lpr_gt_n_min_ago">>% d นาทีที่แล้ว</string>
	<string name="lpr_lt_1_sec_ago">&lt; 1 วินาทีที่ผ่านมา</string>
	<string name="lpr_n_sec_ago">% d วินาทีที่ผ่านมา</string>
	<string name="more_menu">มากกว่า...</string>
	<string name="need_creds_error">ต้องใช้ข้อมูลรับรอง VPN แต่ไม่มีให้</string>
	<string name="no_profile_types">ไม่มีประเภทโปรไฟล์ที่รู้จักที่ใช้ได้</string>
	<string name="no_profiles_loaded">สำหรับใช้ในการศึกษาเท่านั้น ห้ามนำไปจำหน่าย หรือแสวงหาผลประโยชน์ในทางมิชอบ</string>
	<string name="notification_initial_content">VPN</string>
	<string name="ok">ตกลง</string>
	<string name="openvpn_ad">โซลูชัน VPN สำหรับธุรกิจของคุณ</string>
	<string name="openvpn_link">http://openvpn.net/as/</string>
	<string name="openvpn_settings">การตั้งค่า VPN</string>
	<string name="org_name">องค์กร:</string>
	<string name="org_unit">หน่วยองค์กร:</string>
	<string name="password">รหัสผ่าน:</string>
	<string name="password_save_prompt">บันทึก</string>
	<string name="pause">VPN: หยุดชั่วคราว (กำลังรอเครือข่าย)</string>
	<string name="pause_vpn_on_blanked_screen_summary">หยุด VPN ชั่วคราวเมื่อหน้าจอว่างเปล่า</string>
	<string name="pause_vpn_on_blanked_screen_title">ประหยัดแบตเตอรี่</string>
	<string name="proxy_cancel_button">ยกเลิก</string>
	<string name="proxy_save_button">บันทึก</string>
	<string name="proxy_title_add">เพิ่มการตั้งค่า HTTP Proxy</string>
	<string name="tls_version_min_override_summary">เลือกรุ่น SSL / TLS ขั้นต่ำสำหรับการสื่อสารกับเซิร์ฟเวอร์ OpenVPN</string>
	<string name="tls_version_min_override_title">เวอร์ชัน TLS ขั้นต่ำ</string>
	<string name="tun_persist_summary">บล็อกอินเทอร์เน็ตในขณะที่ VPN หยุดชั่วคราวหรือเชื่อมต่อใหม่ (หมายเหตุ: Android เวอร์ชัน 4.4 ถึง 4.4.2 มีข้อบกพร่องที่ป้องกันการใช้ตัวเลือกนี้)</string>
	<string name="tun_persist_title">อุโมงค์ไร้รอยต่อ</string>
	<string name="ui_dark_theme_summary">เปิดใช้งานธีมสีเข้มสำหรับ UI (ต้องรีสตาร์ทแอพ)</string>
	<string name="ui_dark_theme_title">ใช้ชุดรูปแบบ สีเข้ม</string>
	<string name="vpn_proto_summary">เลือกโปรโตคอล VPN</string>
	<string name="vpn_proto_title">โปรโตคอล VPN</string>
</resources>